# calibration

calibration/malleus/: collect_wearable_prop_data.py  collect_wearable_prop_data.py~  set_environment.sh  set_environment.sh~
calibration/vicon-beltpack-postprocess/: README.md  setup.py
calibration/vicon-beltpack-postprocess/extsync_decode/: CMakeLists.txt  README.md
calibration/vicon-beltpack-postprocess/extsync_decode/src/: extsync_decode.cc
calibration/vicon-beltpack-postprocess/extsync_decode/tests/: output.1.txt  output.2.txt  output.3.txt  output.txt
calibration/vicon-beltpack-postprocess/vicon-beltpack-postprocess/: vicon_beltpack_postprocess.py
calibration/vicon_calibration/: capture.sh  first.sh  second.sh
